Make nb-close important

--- a/core/uri/css/app.css/sass/admin/_helpers.scss
+++ b/core/uri/css/app.css/sass/admin/_helpers.scss
@@ -6,7 +6,7 @@
 
 .nb-open { display: inherit; }
 
-.nb-close , div.nb-close, li.nb-close, ul.nb-close { display: none; }
+.nb-close , div.nb-close, li.nb-close, ul.nb-close { display: none!important; }
 
 .medium-screen .only-sm, .large-screen .only-sm { display: none; }
 
