--- a/core/uri/css/app.css/sass/admin/_modal.scss
+++ b/core/uri/css/app.css/sass/admin/_modal.scss
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    font-family: $admin-text;
 
     &.nb-close {
         display: none;
