--- a/core/uri/css/app.css/sass/admin/_notifications.scss
+++ b/core/uri/css/app.css/sass/admin/_notifications.scss
@@ -10,6 +10,7 @@
     box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.2);
     width: 330px;
     z-index: 10000;
+    font-family: $admin-text;
 
     @include breakpoint(tablet) {
         margin: 20px 50px 0 0;
