--- a/core/uri/css/app.css/sass/admin/_forms.scss
+++ b/core/uri/css/app.css/sass/admin/_forms.scss
@@ -242,6 +242,7 @@ th {
     background-color: #fff;
     box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.25);
     position: relative;
+    font-family: $admin-text;
 
     h1 {
         padding: 0 0 30px;
