--- a/core/uri/css/app.css/sass/admin/_forms.scss
+++ b/core/uri/css/app.css/sass/admin/_forms.scss
@@ -248,6 +248,16 @@ th {
         padding: 0 0 30px;
     }
 
+    p {
+        font-size: 14px;
+        margin: 15px 0 0;
+    }
+
+    a {
+        color: $admin-blue;
+        text-decoration: none;
+    }
+
     .nimbly-logo {
         position: absolute;
         z-index: 2000;
