--- a/core/uri/css/app.css/sass/admin/_notifications.scss
+++ b/core/uri/css/app.css/sass/admin/_notifications.scss
@@ -8,6 +8,7 @@
     padding: 20px;
     margin: 20px 20px 0 20px;
     box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
     width: 330px;
     z-index: 10000;
     font-family: $admin-text;
