--- a/core/uri/css/app.css/css/style.css
+++ b/core/uri/css/app.css/css/style.css
@@ -441,6 +441,7 @@ img[data-img-uuid] {
   padding: 20px;
   margin: 20px 20px 0 20px;
   box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
   width: 330px;
   z-index: 10000;
   font-family: sans-serif; }
@@ -455,7 +456,8 @@ img[data-img-uuid] {
     padding: 0;
     line-height: 1.4; }
 
-.nb-callout, .nb-notification { position: fixed; top: 0; right: 0; left: 0; background: #fffdcf; padding: 20px; margin: 20px 20px 0 20px; -webkit-box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.2); box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.2); border-radius: 4px; width: 330px; z-index: 10000; font-family: sans-serif; }
+/******/
+#modal {
   position: fixed;
   top: 0;
   bottom: 0;
