--- a/core/uri/css/app.css/sass/admin/_modal.scss
+++ b/core/uri/css/app.css/sass/admin/_modal.scss
@@ -40,6 +40,7 @@
         font-size: 20px;
         line-height: 20px;
         cursor: pointer;
+        z-index: 9999;
     }
 
     .modal-caption {
