--- a/core/uri/css/app.css/sass/admin/_notifications.scss
+++ b/core/uri/css/app.css/sass/admin/_notifications.scss
@@ -14,7 +14,7 @@
     font-family: $admin-text;
 
     @include breakpoint(tablet) {
-        margin: 20px 50px 0 0;
+        margin: 20px calc(50% - 165px) 0 0;
         left: auto;
     }
 
