--- a/core/uri/css/app.css/sass/admin/_img.scss
+++ b/core/uri/css/app.css/sass/admin/_img.scss
@@ -31,6 +31,7 @@ img[data-img-uuid] {
 	img { display: none; }
 }
 
+/* baguettebox gallery overwrites */
 
 #baguetteBox-overlay .full-image {
 	overflow: hidden;
