--- a/core/uri/css/app.css/sass/admin/_forms.scss
+++ b/core/uri/css/app.css/sass/admin/_forms.scss
@@ -199,6 +199,10 @@ input[type="submit"] {
         color: #ccc;
     }
 
+    &.nb-button-transparent {
+        background-color: transparent;
+    }
+
     &.green {
         background-color: $admin-green;
     }
