--- a/core/uri/css/app.css/sass/admin/_icons.scss
+++ b/core/uri/css/app.css/sass/admin/_icons.scss
@@ -5,6 +5,9 @@
     width: 30px;
     height: 30px;
     display: inline-block;
+    &.nb-disabled {
+        opacity: .25;
+    }
 }
 
 .nb-icon-close {
@@ -45,6 +48,13 @@
     min-width: 200px;
 }
 
+.nb-icon-save {
+    background-image: url('../img/icon-save-white.svg');
+    &.nb-icon {
+        background-size: 20px 20px;
+    }
+}
+
 .nb-icon-btn {
     padding: 0 10px 0 32px !important;
     background-position: left 7px center;
@@ -52,6 +62,8 @@
     background-size: 20px 20px;
     width: auto;
 }
+
+
 
 [data-close], 
 [data-open], 
