--- a/core/uri/css/app.css/css/style.css
+++ b/core/uri/css/app.css/css/style.css
@@ -330,6 +330,11 @@ img[data-img-uuid] {
   .nb-icon-save.nb-icon {
     background-size: 20px 20px; }
 
+.nb-icon-media {
+  background-image: url("../img/icon-picture-white.svg"); }
+  .nb-icon-media.nb-icon {
+    background-size: 20px 20px; }
+
 .nb-icon-btn {
   padding: 0 10px 0 32px !important;
   background-position: left 7px center;
