--- a/core/uri/css/app.css/sass/admin/_icons.scss
+++ b/core/uri/css/app.css/sass/admin/_icons.scss
@@ -62,6 +62,13 @@
     }
 }
 
+.nb-icon-vimeo {
+    background-image: url('../img/icon-vimeo-white.svg');
+    &.nb-icon {
+        background-size: 20px 20px;
+    }
+}
+
 .nb-icon-btn {
     padding: 0 10px 0 32px !important;
     background-position: left 7px center;
