Add core paths to last-update

--- a/css/tw/out.css
+++ b/css/tw/out.css
@@ -4531,6 +4531,11 @@ textarea.form-control.is-invalid {
   color: rgb(23 23 23 / var(--tw-text-opacity));
 }
 
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
