--- a/css/tw/in.css
+++ b/css/tw/in.css
@@ -33,3 +33,5 @@
 .nb-form-errors {
     @apply bg-red-50 border border-red-400 rounded text-red-600 p-4 my-4;
 }
+
+[x-cloak] { display: none !important; }
