--- a/css/tw/out.css
+++ b/css/tw/out.css
@@ -44,7 +44,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Inter, sans-serif;
+  font-family: Inter var, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -2832,10 +2832,6 @@ textarea.form-control.is-invalid {
   right: 2.25rem;
 }
 
-.right-\[30px\] {
-  right: 30px;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -2993,11 +2989,6 @@ textarea.form-control.is-invalid {
   margin-bottom: 0px !important;
 }
 
-.-mx-4 {
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-
 .mx-\[10px\] {
   margin-left: 10px;
   margin-right: 10px;
@@ -3125,6 +3116,10 @@ textarea.form-control.is-invalid {
 
 .ml-\[3px\] {
   margin-left: 3px;
+}
+
+.ml-\[4px\] {
+  margin-left: 4px;
 }
 
 .ml-\[5px\] {
@@ -3391,10 +3386,6 @@ textarea.form-control.is-invalid {
   height: calc(100% - 100px);
 }
 
-.h-\[calc\(100\%-50px\)\] {
-  height: calc(100% - 50px);
-}
-
 .h-auto {
   height: auto;
 }
@@ -3405,10 +3396,6 @@ textarea.form-control.is-invalid {
 
 .h-screen {
   height: 100vh;
-}
-
-.max-h-\[100\%\] {
-  max-height: 100%;
 }
 
 .max-h-\[calc\(100\%-64px\)\] {
@@ -3433,10 +3420,6 @@ textarea.form-control.is-invalid {
 
 .min-h-\[40px\] {
   min-height: 40px;
-}
-
-.min-h-\[5px\] {
-  min-height: 5px;
 }
 
 .min-h-\[auto\] {
@@ -3666,6 +3649,10 @@ textarea.form-control.is-invalid {
 
 .flex-auto {
   flex: 1 1 auto;
+}
+
+.flex-none {
+  flex: none;
 }
 
 .flex-shrink-0 {
@@ -4194,10 +4181,6 @@ textarea.form-control.is-invalid {
   border-right-width: 30px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-t-0 {
   border-top-width: 0px;
 }
@@ -4293,11 +4276,6 @@ textarea.form-control.is-invalid {
   border-color: rgb(252 165 165 / var(--tw-border-opacity));
 }
 
-.border-slate-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-
 .border-transparent {
   border-color: transparent;
 }
@@ -4391,6 +4369,10 @@ textarea.form-control.is-invalid {
 
 .bg-clight\/20 {
   background-color: rgb(128 186 236 / 0.2);
+}
+
+.bg-clight\/50 {
+  background-color: rgb(128 186 236 / 0.5);
 }
 
 .bg-cnormal {
@@ -4502,10 +4484,6 @@ textarea.form-control.is-invalid {
 
 .fill-white {
   fill: #fff;
-}
-
-.stroke-white {
-  stroke: #fff;
 }
 
 .\!p-0 {
@@ -4654,11 +4632,6 @@ textarea.form-control.is-invalid {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
 }
 
 .py-3 {
@@ -4821,6 +4794,10 @@ textarea.form-control.is-invalid {
 
 .align-\[-0\.125em\] {
   vertical-align: -0.125em;
+}
+
+.font-primary {
+  font-family: Inter var, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -4993,10 +4970,6 @@ textarea.form-control.is-invalid {
 
 .leading-normal {
   line-height: 1.5;
-}
-
-.leading-tight {
-  line-height: 1.25;
 }
 
 .tracking-\[-0\.00833em\] {
@@ -5469,6 +5442,10 @@ textarea.form-control.is-invalid {
   transition-timing-function: ease;
 }
 
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -5527,6 +5504,11 @@ textarea.form-control.is-invalid {
 
 [contenteditable="true"] {
   background-color: rgb(128 186 236 / 0.2);
+}
+
+[contenteditable="true"]:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .medium-toolbar-arrow-under:after {
@@ -5652,9 +5634,17 @@ textarea.form-control.is-invalid {
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
-.medium-editor-placeholder:after {
+.medium-editor-placeholder[contenteditable=true]:after {
   --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
+  color: rgb(212 212 212 / var(--tw-text-opacity));
+}
+
+.medium-editor-placeholder[contenteditable=false]:after {
+  display: none;
+}
+
+.medium-editor-element {
+  min-height: 0px;
 }
 
 form .medium-editor-element, form [data-nb-edit] {
@@ -5669,7 +5659,7 @@ form .medium-editor-element, form [data-nb-edit] {
   padding-bottom: 0.75rem;
   min-height: 41px;
   outline: 2px solid transparent;
-  outline-offset: 2px;
+  outline-offset: 0px;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 200ms;
@@ -5677,9 +5667,10 @@ form .medium-editor-element, form [data-nb-edit] {
 }
 
 form .medium-editor-element[data-medium-focused] {
-  border-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgb(0 116 217 / var(--tw-border-opacity));
+  border-color: transparent;
+  outline-width: 2px;
+  outline-offset: 0px;
+  outline-color: #0074D9;
 }
 
 .selection\:bg-transparent *::-moz-selection {
@@ -5883,11 +5874,6 @@ form .medium-editor-element[data-medium-focused] {
   border-radius: 50%;
 }
 
-.hover\:border-cdark:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 104 195 / var(--tw-border-opacity));
-}
-
 .hover\:border-cnormal:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 116 217 / var(--tw-border-opacity));
@@ -5913,11 +5899,6 @@ form .medium-editor-element[data-medium-focused] {
 .hover\:bg-cdark:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 104 195 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-cdarkest:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 81 152 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-clight:hover {
@@ -6024,12 +6005,6 @@ form .medium-editor-element[data-medium-focused] {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:outline-none:hover {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -6065,11 +6040,6 @@ form .medium-editor-element[data-medium-focused] {
   border-color: rgb(220 76 100 / var(--tw-border-opacity)) !important;
 }
 
-.focus\:border-cdark:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 104 195 / var(--tw-border-opacity));
-}
-
 .focus\:border-primary:focus {
   --tw-border-opacity: 1;
   border-color: rgb(0 116 217 / var(--tw-border-opacity));
@@ -6086,11 +6056,6 @@ form .medium-editor-element[data-medium-focused] {
 
 .focus\:bg-\[\#00000026\]:focus {
   background-color: #00000026;
-}
-
-.focus\:bg-cdarkest:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 81 152 / var(--tw-bg-opacity));
 }
 
 .focus\:bg-clight:focus {
@@ -6161,12 +6126,6 @@ form .medium-editor-element[data-medium-focused] {
 .focus\:shadow-\[0_8px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.3\)\2c 0_4px_18px_0_rgba\(59\2c 113\2c 202\2c 0\.2\)\]:focus {
   --tw-shadow: 0 8px 9px -4px rgba(59,113,202,0.3),0 4px 18px 0 rgba(59,113,202,0.2);
   --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:shadow-lg:focus {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -6345,19 +6304,9 @@ form .medium-editor-element[data-medium-focused] {
   background-color: transparent;
 }
 
-.active\:border-cdarkest:active {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 81 152 / var(--tw-border-opacity));
-}
-
 .active\:bg-\[\#cacfd1\]:active {
   --tw-bg-opacity: 1;
   background-color: rgb(202 207 209 / var(--tw-bg-opacity));
-}
-
-.active\:bg-cdarkest:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 81 152 / var(--tw-bg-opacity));
 }
 
 .active\:bg-clight:active {
@@ -6382,12 +6331,6 @@ form .medium-editor-element[data-medium-focused] {
 .active\:shadow-\[0_8px_9px_-4px_rgba\(59\2c 113\2c 202\2c 0\.3\)\2c 0_4px_18px_0_rgba\(59\2c 113\2c 202\2c 0\.2\)\]:active {
   --tw-shadow: 0 8px 9px -4px rgba(59,113,202,0.3),0 4px 18px 0 rgba(59,113,202,0.2);
   --tw-shadow-colored: 0 8px 9px -4px var(--tw-shadow-color), 0 4px 18px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.active\:shadow-lg:active {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -6429,11 +6372,19 @@ form .medium-editor-element[data-medium-focused] {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
+.disabled\:text-white\/50:disabled {
+  color: rgb(255 255 255 / 0.5);
+}
+
 .disabled\:opacity-25:disabled {
   opacity: 0.25;
 }
 
 .disabled\:hover\:bg-transparent:hover:disabled {
+  background-color: transparent;
+}
+
+.hover\:disabled\:bg-transparent:disabled:hover {
   background-color: transparent;
 }
 
@@ -6628,10 +6579,6 @@ form .medium-editor-element[data-medium-focused] {
   display: none;
 }
 
-.data-\[te-sidenav-slim\=\'true\'\]\:hidden[data-te-sidenav-slim='true'] {
-  display: none;
-}
-
 .data-\[te-sidenav-slim-collapsed\=\'true\'\]\:w-\[30px\][data-te-sidenav-slim-collapsed='true'] {
   width: 30px;
 }
@@ -6711,6 +6658,11 @@ form .medium-editor-element[data-medium-focused] {
 
 .data-\[te-select-selected\]\:data-\[te-select-option-disabled\]\:bg-transparent[data-te-select-option-disabled][data-te-select-selected] {
   background-color: transparent;
+}
+
+.data-\[te-sidenav-slim\=\'false\'\]\:px-2[data-te-sidenav-slim='false'] {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .data-\[te-datepicker-cell-disabled\]\:text-neutral-300[data-te-datepicker-cell-disabled] {
@@ -7373,12 +7325,6 @@ form .medium-editor-element[data-medium-focused] {
   }
 }
 
-@media (min-width: 786px) {
-  .min-\[786px\]\:max-w-\[710px\] {
-    max-width: 710px;
-  }
-}
-
 @media (min-width: 1024px) {
   .lg\:w-\[420px\] {
     width: 420px;
@@ -7645,3 +7591,4 @@ form .medium-editor-element[data-medium-focused] {
 .\[\&\[data-te-sidenav-slim-collapsed\=\'true\'\]\[data-te-sidenav-slim\=\'true\'\]\]\:\[display\:unset\][data-te-sidenav-slim-collapsed='true'][data-te-sidenav-slim='true'] {
   display: unset;
 }
+
